# ttds

./: .clang-format  .editorconfig  .gitignore  README  README.md  flake.nix  main.c  meson.build  run_tests.sh  shell.nix  testing.c  testing.h
.github/workflows/: build.yml
bindings/py/: README.md  pyproject.toml
bindings/py/examples/: create.py  drawing.py  sunflower.py
bindings/py/ttds_py/: __init__.py
bindings/ts/: package.json  pnpm-lock.yaml  tsconfig.json
bindings/ts/src/: index.ts  mod.ts
bindings/ts/src/cli/: param.ts
bindings/ts/src/example/: simple.ts
display/: README  abort.h  main.c  meson.build  run_tests.sh  termination.h  testing.c  tests.nix
display/nix/: default.nix  musl.nix  ttds-display.nix
display/rendering/: canvas.c  canvas.h  rendering.c  rendering.h
display/rendering/backends/: drm.c  drm.h
display/rendering/drm/: drm.h  input.c  input.h
display/rendering/mem/: mem.c  mem.h
display/tests/: expect-bezier2.data  expect-circles.data  expect-copy-rect.data  expect-lines-array.data  expect-lines-burst.data  expect-triangle-array.data  expect-triangles.data
display/threads/: commands.c  commands.h  input.c  termination.c  termination.h  ui.c  ui.h
doc/: README.md  js.md  python.md
rendering/: canvas.c  canvas.h  rendering.c  rendering.h
rendering/backends/: drm.c
tests/: expect-circles.data  expect-glider.data  expect-rects.data
threads/: commands.c  input.c  input.h  ui.c  ui.h
web/: CHANGELOG.md  Justfile  README  README.md  admin.pass  default.nix  ttds-web.cabal  ttds-web.nix
web/app/: Auth.hs  Main.hs  Proc.hs  exit.c
web/tests/: basic.sh  genPass.hs
