cabal-version:      3.0
name:               ttds-web
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Tali Auster
maintainer:         me@tali.network
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ttds-web
    import:           warnings
    main-is:          Main.hs
    other-modules: Auth, Proc
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, process, scotty ^>= 0.22, text ^>= 2.0.2, bytestring ^>= 0.12.2.0, http-types ^>= 0.12.4, scrypt ^>= 0.5.0, base64 ^>= 1.0
    hs-source-dirs:   app
    default-language: Haskell2010
