cabal-version:      3.0
name:               ttds-web
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Tali Auster
maintainer:         me@tali.network
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ttds-web
    import:           warnings
    main-is:          Main.hs
    other-modules: Auth, Proc

    build-depends:
      base >=4.16.0.0 && <= 4.21.0.0,
      process >= 1.6.0.0 && <= 1.6.25.0,
      scotty >= 0.21.0 && <= 0.22,
      text >= 2.0 && <= 2.1.2,
      bytestring >= 0.11.0.0 && <= 0.12.2.0,
      http-types ^>= 0.12.4,
      scrypt ^>= 0.5.0,
      base64 >= 0.4.2.0 && <= 1.0

    hs-source-dirs:   app
    default-language: Haskell2010
