cabal-version:      3.0
name:               ttds-web
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Tali Auster
maintainer:         me@tali.network
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files: app/exit.c

common warnings
    ghc-options: -Wall

executable ttds-web
    import:           warnings
    main-is:          Main.hs
    other-modules: Auth, Proc

    c-sources: app/exit.c

    build-depends:
      base >=4.16.0.0 && <= 4.21.0.0,
      base64 >= 0.4.2.0 && <= 1.0,
      bytestring >= 0.11.0.0 && <= 0.12.2.0,
      containers ^>= 0.6,
      http-types ^>= 0.12.4,
      process >= 1.6.0.0 && <= 1.6.25.0,
      scotty >= 0.21.0 && <= 0.22,
      scrypt ^>= 0.5.0,
      stm ^>= 2.5,
      text >= 2.0 && <= 2.1.2,
      uuid ^>= 1.3.15,
      unix ^>= 2.8.4.0

    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010
